@@ -918,7 +918,7 @@ dnl
 AC_ARG_ENABLE(debug,
         [  --enable-debug          debug [default=no]],
         use_debug="Yes";
-        AC_DEFINE(debug), use_debug="No")
+        AC_DEFINE(GDA_DEBUG), use_debug="No")
 
 
 dnl Disable rebuild of glib-mkenum -generated source code:
