@@ -1,3 +1,11 @@
+2005-06-18  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #307549
+
+	* libgda/gda-config.c:
+	* configure.in: s/debug/GDA_DEBUG to avoid weird substitions on MySQL
+	headers.
+
 2005-06-15  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* libgda-2.0.pc.in:
